# mechanical_poetry

./: README.md  pyproject.toml
src/: test.py
src/app/: routes.py  service.py  settings.py
src/app/api/: handlers.py
src/app/templates/: finish.html  index.html  result.html
src/app/templates/static/css/: app.10c9cba5f2e2f1dc959b0a7520f19d0b.css  button.css  result_img.css
src/app/templates/static/js/: app.51b17a4a5cbf9679ef91.js  manifest.b2097a93e285611f4241.js  vendor.5f4aa611c16f3365e040.js
src/app/utils/: configurator.py  logs.py
src/config/: default.yaml
