[tool.poetry]
name = "mechanical_poetry"
version = "0.1.0"
description = ""
authors = ["Rusnak Aleksander <rus91ad@mail.ru>"]

[tool.poetry.dependencies]
python = "3.8.5"
trafaret = "^2.1.1"
Jinja2 = "^3.1.2"
aiohttp-jinja2 = "^1.5"
trafaret-config = "^2.0.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
