[tool.poetry]
name = "mechanical_poetry"
version = "0.1.0"
description = ""
authors = ["Rusnak Aleksander <rus91ad@mail.ru>"]

[tool.poetry.dependencies]
python = "3.7.0"
trafaret = "^2.1.1"
Jinja2 = "3.0.3"
aiohttp-jinja2 = "^1.5"
trafaret-config = "^2.0.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
